# cougar-courses-backend

./: .gitignore  Cargo.toml  README.md
import/: convert_pdf_to_csv_data.py
migrations/: 20211122205313_add_courses_table.sql  20211122205333_add_grades_table.sql  20211227214216_add_courses_table_indexes.sql  20211227234238_add_grades_table_indexes.sql
src/: lib.rs
src/graphql/: mod.rs
src/init/: actix.rs  database.rs  dataloader.rs  env_logger.rs  graphql.rs  mod.rs
src/model/: mod.rs
src/model/app/: actix.rs  error.rs  health.rs  mod.rs
src/model/app/dataloader/: grades.rs  mod.rs
src/model/db/: courses.rs  grades.rs  mod.rs
src/model/graphql/: courses.rs  dataloader.rs  mod.rs
src/model/graphql/filter/: course.rs  mod.rs
src/routes/: mod.rs
src/stats/: aggregate.rs  categorical.rs  discrete.rs  mod.rs
