[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-web = "3.3.2"
tokio = "1.14"

lambda_runtime="0.4"
lambda_http="0.4"

sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }

env_logger = "0.9"
async-graphql = "3.0"
async-graphql-actix-web = "3.0"

serde = "1.0"
serde_json = "1.0"