[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-http = "3.0.0-beta.16"
actix-web = "4.0.0-beta.15"
anyhow = "1.0"
async-graphql =  { version = "3.0", features = [ "apollo_tracing", "log" ] }
async-graphql-actix-web = "3.0"
env_logger = "0.9"
lambda_http="0.4"
lambda_runtime="0.4"
log = "0.4"
sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = "1.14"

[dev-dependencies]
sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock" ], default-features = false }